--- a/src/app/support/support.component.html
+++ b/src/app/support/support.component.html
@@ -162,7 +162,7 @@
             <div data-aos="zoom-out" class="row row-grid align-items-center">
                 <div class="col-md-12 order-md-1 ">
                     <div class="pr-md-5 pt-5">
-                        <h3 class="text-white">Quality based service delivery methodology built on best practices gained
+                        <h3 class="text-white ns-fs-11">Quality based service delivery methodology built on best practices gained
                             from ITIL
                             framework for service operations and more than two decades of service delivery</h3>
                     </div>
