--- a/src/app/gis-services/gis-services.component.html
+++ b/src/app/gis-services/gis-services.component.html
@@ -53,53 +53,188 @@
 
     <section class="section section-lg pt-5">
         <div class="container">
-            <div class="nav-wrapper">
-                <ul class="nav nav-pills nav-fill flex-column flex-md-row" id="tabs-icons-text" role="tablist">
-                    <li class="nav-item">
-                        <a class="ns-fs-11  nav-link mb-sm-3 mb-md-0 active" id="tabs-icons-text-1-tab" data-toggle="tab"
-                            href="#tabs-icons-text-1" role="tab" aria-controls="tabs-icons-text-1"
-                            aria-selected="true"><i class="ni ni-cloud-upload-96 mr-2"></i>GIS</a>
+            <div class="custom-tab-content flex-column flex-md-row">
+                <ul ngbNav #nav1="ngbNav" [(activeId)]="active" class="nav nav-pills justify-content-center"
+                    type="pills">
+
+                    <li class="nav-item" [ngbNavItem]="1">
+                        <a class="card shadow nav-link ns-fs-11" ngbNavLink>GIS</a>
+                        <ng-template ngbNavContent>
+                            <div class="tab-content">
+                                <p class="ns-fs-11 description">Geographic Information System (GIS), is a tool used to
+                                    capture, store, analyse and manage mapping data (also referred to as spatial,
+                                    location based or geographic information) and associated attributes which are
+                                    spatially referenced to the earth.</p>
+                                <p class=" ns-fs-11 description">Photomapping utilise an array of advanced GIS software
+                                    and spatial applications. </p>
+                                <h5>MORE ADVANCED GIS SERVICES ARE REGULARLY USED BY SEVERAL GOVERNMENT AGENCIES,
+                                    INDUSTRIES AND COMPANIES SUCH AS</h5>
+                                <div class="pl-3 pr-3 pt-4 pb-1">
+                                    <div *ngFor="let item of gisItems" data-aos="zoom-in" class="row pb-2">
+                                        <div class="col-lg-12">
+                                            <div class="card card-lift--hover shadow border-0 p-2">
+                                                <div class="icon icon-shape icon-shape-primary rounded-circle">
+                                                    <i class="ni ni-bold-right"></i>
+                                                </div>
+                                                <span class="ns-fs-11 mt-0 pl-lg-md position-fixed pt-2">
+                                                    {{ item.text }} </span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </ng-template>
                     </li>
-                    <li class="nav-item">
-                        <a class="ns-fs-11 nav-link mb-sm-3 mb-md-0" id="tabs-icons-text-2-tab" data-toggle="tab"
-                            href="#tabs-icons-text-2" role="tab" aria-controls="tabs-icons-text-2"
-                            aria-selected="false"><i class="ni ni-bell-55 mr-2"></i>Digital Photogrammetry</a>
+                    <li class="nav-item" [ngbNavItem]="2">
+                        <a class="card shadow nav-link ns-fs-11" ngbNavLink>Digital Photogrammetry</a>
+                        <ng-template ngbNavContent>
+                            <div class="tab-content">
+                                <p class="ns-fs-11 description">Dharani have state of the art facilities for offering
+                                    services that covers a wide range of photogrammetric service requirements. Our
+                                    services are envisioned to meet the diverse needs of our clientele quickly and
+                                    efficiently and our project methodologies are based on the unique set of customer
+                                    requirements and challenges.</p>
+                                <p class=" ns-fs-11 description">Photogrammetry allows you to obtain reliable
+                                    information and measurements of physical objects from photographs and use them for
+                                    development of maps, drawings, or 3D models of terrains. Aerial images require pre-
+                                    and post-processing using Photogrammetry before they can be used to extract valuable
+                                    geo-data. </p>
+                                <p class=" ns-fs-11 description">DGT has an extensive experience in handling
+                                    Photogrammetry projects on all scales of mapping. </p>
+                                <p class=" ns-fs-11 description">High quality aerial photography is the primary
+                                    foundation for Photogrammetry mapping, and we have executed numerous projects over
+                                    varied applications.</p>
+                                <h5>SERVICES OFFERED INCLUDE </h5>
+                                <div class="pl-3 pr-3 pt-4 pb-1">
+                                    <div *ngFor="let item of dpItems" data-aos="zoom-in" class="row pb-2">
+                                        <div class="col-lg-12">
+                                            <div class="card card-lift--hover shadow border-0 p-2">
+                                                <div class="icon icon-shape icon-shape-primary rounded-circle">
+                                                    <i class="ni ni-bold-right"></i>
+                                                </div>
+                                                <span class="ns-fs-11 mt-0 pl-lg-md position-fixed pt-2">
+                                                    {{ item.text }} </span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </ng-template>
                     </li>
-                    <li class="nav-item">
-                        <a class="ns-fs-11 nav-link mb-sm-3 mb-md-0" id="tabs-icons-text-3-tab" data-toggle="tab"
-                            href="#tabs-icons-text-3" role="tab" aria-controls="tabs-icons-text-3"
-                            aria-selected="false"><i class="ni ni-calendar-grid-58 mr-2"></i>Ortho Photography</a>
+                    <li class="nav-item" [ngbNavItem]="3">
+                        <a class="card shadow nav-link ns-fs-11" ngbNavLink>Ortho Photography</a>
+                        <ng-template ngbNavContent>
+                            <div class="tab-content">
+                                <p class="ns-fs-11 description">Orthophotography is produced through a set of aerial
+                                    images. Our systems execute aerial Lidar Topography with rectified orthophotography
+                                    with direct geo references.</p>
+                                <p class=" ns-fs-11 description">The data is digitally corrected to represent an
+                                    orthogonal projection without defects of perspective, allowing us to generate
+                                    accurate planimetry and maps, as opposed to an aerial photograph.</p>
+                                <p class=" ns-fs-11 description">Aerial photographs will always present deformations
+                                    caused by the perspective from the camera and the height or the speed at which the
+                                    camera moves.</p>
+                                <div class="text-center card-lift--hover">
+                                    <img src="./assets/img/theme/Ortho.png" alt="Raised image"
+                                        class="img-fluid rounded shadow-lg">
+                                </div>
+                            </div>
+                        </ng-template>
                     </li>
                 </ul>
             </div>
-            <div class="card shadow">
-                <div class="card-body">
-                    <div class="tab-content" id="myTabContent">
-                        <div class="tab-pane fade show active" id="tabs-icons-text-1" role="tabpanel"
-                            aria-labelledby="tabs-icons-text-1-tab">
-                            <p class="description ns-fs-11 ">Raw denim you probably haven't heard of them jean shorts Austin.
-                                Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor,
-                                williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher
-                                synth.</p>
-                            <p class="description ns-fs-11 ">Raw denim you probably haven't heard of them jean shorts Austin.
-                                Nesciunt tofu stumptown aliqua, retro synth master cleanse.</p>
-                        </div>
-                        <div class="tab-pane fade" id="tabs-icons-text-2" role="tabpanel"
-                            aria-labelledby="tabs-icons-text-2-tab">
-                            <p class="ns-fs-11  description">Cosby sweater eu banh mi, qui irure terry richardson ex squid.
-                                Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel,
-                                butcher voluptate nisi qui.</p>
-                        </div>
-                        <div class="tab-pane fade" id="tabs-icons-text-3" role="tabpanel"
-                            aria-labelledby="tabs-icons-text-3-tab">
-                            <p class=" ns-fs-11  description">Raw denim you probably haven't heard of them jean shorts Austin.
-                                Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor,
-                                williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher
-                                synth.</p>
-                        </div>
-                    </div>
-                </div>
+            <div class="custom-tab-content flex-column flex-md-row" style="margin-top:-15px;">
+                <ul ngbNav #nav2="ngbNav" [(activeId)]="active" class="nav nav-pills justify-content-center"
+                    type="pills">
+
+                    <li class="nav-item" [ngbNavItem]="4">
+                        <a class="card shadow nav-link ns-fs-11" ngbNavLink>GIS</a>
+                        <ng-template ngbNavContent>
+                            <div class="tab-content">
+                                <p class="ns-fs-11 description">Geographic Information System (GIS), is a tool used to
+                                    capture, store, analyse and manage mapping data (also referred to as spatial,
+                                    location based or geographic information) and associated attributes which are
+                                    spatially referenced to the earth.</p>
+                                <p class=" ns-fs-11 description">Photomapping utilise an array of advanced GIS software
+                                    and spatial applications. </p>
+                                <h5>MORE ADVANCED GIS SERVICES ARE REGULARLY USED BY SEVERAL GOVERNMENT AGENCIES,
+                                    INDUSTRIES AND COMPANIES SUCH AS</h5>
+                                <div class="pl-3 pr-3 pt-4 pb-1">
+                                    <div *ngFor="let item of gisItems" data-aos="zoom-in" class="row pb-2">
+                                        <div class="col-lg-12">
+                                            <div class="card card-lift--hover shadow border-0 p-2">
+                                                <div class="icon icon-shape icon-shape-primary rounded-circle">
+                                                    <i class="ni ni-bold-right"></i>
+                                                </div>
+                                                <span class="ns-fs-11 mt-0 pl-lg-md position-fixed pt-2">
+                                                    {{ item.text }} </span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </ng-template>
+                    </li>
+                    <li class="nav-item" [ngbNavItem]="5">
+                        <a class="card shadow nav-link ns-fs-11" ngbNavLink>Digital Photogrammetry</a>
+                        <ng-template ngbNavContent>
+                            <div class="tab-content">
+                                <p class="ns-fs-11 description">Dharani have state of the art facilities for offering
+                                    services that covers a wide range of photogrammetric service requirements. Our
+                                    services are envisioned to meet the diverse needs of our clientele quickly and
+                                    efficiently and our project methodologies are based on the unique set of customer
+                                    requirements and challenges.</p>
+                                <p class=" ns-fs-11 description">Photogrammetry allows you to obtain reliable
+                                    information and measurements of physical objects from photographs and use them for
+                                    development of maps, drawings, or 3D models of terrains. Aerial images require pre-
+                                    and post-processing using Photogrammetry before they can be used to extract valuable
+                                    geo-data. </p>
+                                <p class=" ns-fs-11 description">DGT has an extensive experience in handling
+                                    Photogrammetry projects on all scales of mapping. </p>
+                                <p class=" ns-fs-11 description">High quality aerial photography is the primary
+                                    foundation for Photogrammetry mapping, and we have executed numerous projects over
+                                    varied applications.</p>
+                                <h5>SERVICES OFFERED INCLUDE </h5>
+                                <div class="pl-3 pr-3 pt-4 pb-1">
+                                    <div *ngFor="let item of dpItems" data-aos="zoom-in" class="row pb-2">
+                                        <div class="col-lg-12">
+                                            <div class="card card-lift--hover shadow border-0 p-2">
+                                                <div class="icon icon-shape icon-shape-primary rounded-circle">
+                                                    <i class="ni ni-bold-right"></i>
+                                                </div>
+                                                <span class="ns-fs-11 mt-0 pl-lg-md position-fixed pt-2">
+                                                    {{ item.text }} </span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </ng-template>
+                    </li>
+                    <li class="nav-item" [ngbNavItem]="">
+                        <a class="card shadow nav-link ns-fs-11" ngbNavLink>Ortho Photography</a>
+                        <ng-template ngbNavContent>
+                            <div class="tab-content">
+                                <p class="ns-fs-11 description">Orthophotography is produced through a set of aerial
+                                    images. Our systems execute aerial Lidar Topography with rectified orthophotography
+                                    with direct geo references.</p>
+                                <p class=" ns-fs-11 description">The data is digitally corrected to represent an
+                                    orthogonal projection without defects of perspective, allowing us to generate
+                                    accurate planimetry and maps, as opposed to an aerial photograph.</p>
+                                <p class=" ns-fs-11 description">Aerial photographs will always present deformations
+                                    caused by the perspective from the camera and the height or the speed at which the
+                                    camera moves.</p>
+                                <div class="text-center card-lift--hover">
+                                    <img src="./assets/img/theme/Ortho.png" alt="Raised image"
+                                        class="img-fluid rounded shadow-lg">
+                                </div>
+                            </div>
+                        </ng-template>
+                    </li>
+                </ul>
             </div>
+            <div [ngbNavOutlet]="nav1" class="custom-tab-content"></div>
+            <div [ngbNavOutlet]="nav2" class="custom-tab-content"></div>
 
         </div>
         <!-- SVG separator -->
