--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -8,7 +8,7 @@
       [attr.aria-expanded]="!isCollapsed" aria-controls="navbar_global">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="navbar-collapse collapse" id="navbar_global" [ngbCollapse]="isCollapsed">
+    <div class="navbar-collapse collapse ml-5" id="navbar_global" [ngbCollapse]="isCollapsed">
       <div class="navbar-collapse-header">
         <div class="row">
           <div class="col-6 collapse-brand">
@@ -26,6 +26,11 @@
         </div>
       </div>
       <ul class="navbar-nav navbar-nav-hover align-items-lg-center">
+        <li class="nav-item">
+          <a class="nav-link no-caret" role="button" [routerLink]="['/home']">
+            <span class="nav-link-inner--text">Home</span>
+          </a>
+        </li>
         <li class="nav-item">
           <a class="nav-link no-caret" role="button" [routerLink]="['/about-us']">
             <span class="nav-link-inner--text">About Us</span>
