Added jobs and gis service and it services

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -44,7 +44,7 @@
               <div class="card card-lift--hover shadow border-0 height-100">
                 <div class="card-body py-5">
                   <div class="icon icon-shape icon-shape-primary rounded-circle mb-4">
-                    <i class="fa fa-briefcase"></i>
+                    <i class="fa fa-wrench"></i>
                   </div>
                   <h6 class="text-primary text-uppercase">Services</h6>
                   <p class="ns-fs-11 description mt-3">With the right services NascentTechnologies provides advantages
@@ -138,7 +138,7 @@
           <div class="d-flex px-3">
             <div>
               <div class="icon icon-lg icon-shape bg-gradient-white shadow rounded-circle text-primary">
-                <i class="fa fa-briefcase"></i>
+                <i class="fa fa-wrench"></i>
               </div>
             </div>
             <div class="pl-4">
@@ -216,7 +216,7 @@
               </div>
             </div>
           </div>
-          <div data-aos="zoom-in-right" data-aos-duration="1000">
+          <div data-aos="zoom-in-right" data-aos-duration="1000" style="position: relative; z-index: 5;">
             <div class="card card-lift--hover shadow shadow-lg--hover mt-5">
               <div class="card-body">
                 <div class="d-flex px-3">
