--- a/src/app/our-portfolio/our-portfolio.component.html
+++ b/src/app/our-portfolio/our-portfolio.component.html
@@ -49,7 +49,7 @@
     <section class="section section-lg pt-lg-0">
         <div class="container">
             <div class="row justify-content-center pt-3">
-                <div *ngFor="let item of portfolioItems.slice(0, portfolioItems.length / 2); let i = index"
+                <div *ngFor="let i of customArray"
                     data-aos="zoom-in" class="row pt-3">
                     <div class="col-lg-6 pb-3">
                         <div class="card card-lift--hover shadow border-0 height-100">
