--- a/src/app/gis-services/gis-services.component.html
+++ b/src/app/gis-services/gis-services.component.html
@@ -52,7 +52,7 @@
 
 
     <section class="section section-lg pt-5">
-        <div class="container">
+        <div data-aos="zoom-out" class="container">
             <div class="custom-tab-content flex-column flex-md-row">
                 <ul ngbNav #nav1="ngbNav" [(activeId)]="active" class="nav nav-pills justify-content-center"
                     type="pills">
@@ -76,7 +76,8 @@
                                                 <div class="icon icon-shape icon-shape-primary rounded-circle">
                                                     <i class="ni ni-bold-right"></i>
                                                 </div>
-                                                <span class="ns-fs-11 mt-0 pl-lg-md position-fixed pt-2">
+                                                <span
+                                                    class="text-capitalize ns-fs-11 mt-0 pl-lg-md position-fixed pt-2">
                                                     {{ item.text }} </span>
                                             </div>
                                         </div>
@@ -112,7 +113,8 @@
                                                 <div class="icon icon-shape icon-shape-primary rounded-circle">
                                                     <i class="ni ni-bold-right"></i>
                                                 </div>
-                                                <span class="ns-fs-11 mt-0 pl-lg-md position-fixed pt-2">
+                                                <span
+                                                    class="text-capitalize ns-fs-11 mt-0 pl-lg-md position-fixed pt-2">
                                                     {{ item.text }} </span>
                                             </div>
                                         </div>
@@ -148,84 +150,95 @@
                     type="pills">
 
                     <li class="nav-item" [ngbNavItem]="4">
-                        <a class="card shadow nav-link ns-fs-11" ngbNavLink>GIS</a>
+                        <a class="card shadow nav-link ns-fs-11" ngbNavLink>Mobile LiDAR </a>
                         <ng-template ngbNavContent>
                             <div class="tab-content">
-                                <p class="ns-fs-11 description">Geographic Information System (GIS), is a tool used to
-                                    capture, store, analyse and manage mapping data (also referred to as spatial,
-                                    location based or geographic information) and associated attributes which are
-                                    spatially referenced to the earth.</p>
-                                <p class=" ns-fs-11 description">Photomapping utilise an array of advanced GIS software
-                                    and spatial applications. </p>
-                                <h5>MORE ADVANCED GIS SERVICES ARE REGULARLY USED BY SEVERAL GOVERNMENT AGENCIES,
-                                    INDUSTRIES AND COMPANIES SUCH AS</h5>
-                                <div class="pl-3 pr-3 pt-4 pb-1">
-                                    <div *ngFor="let item of gisItems" data-aos="zoom-in" class="row pb-2">
-                                        <div class="col-lg-12">
-                                            <div class="card card-lift--hover shadow border-0 p-2">
-                                                <div class="icon icon-shape icon-shape-primary rounded-circle">
-                                                    <i class="ni ni-bold-right"></i>
-                                                </div>
-                                                <span class="ns-fs-11 mt-0 pl-lg-md position-fixed pt-2">
-                                                    {{ item.text }} </span>
-                                            </div>
-                                        </div>
-                                    </div>
+                                <p class="ns-fs-11 description">Mobile LiDAR offers numerous benefits over conventional
+                                    ground surveys and aerial mapping. This non-invasive survey method can be used day
+                                    or night, with the effective acquisition of millions of 3-D design points per
+                                    minute.</p>
+                                <div class="col-lg-6 card-lift--hover">
+                                    <img src="./assets/img/theme/MobileLidar.png" alt="Raised image"
+                                        class="img-fluid rounded shadow-lg">
                                 </div>
                             </div>
                         </ng-template>
                     </li>
                     <li class="nav-item" [ngbNavItem]="5">
-                        <a class="card shadow nav-link ns-fs-11" ngbNavLink>Digital Photogrammetry</a>
+                        <a class="card shadow nav-link ns-fs-11" ngbNavLink>UAV</a>
                         <ng-template ngbNavContent>
                             <div class="tab-content">
-                                <p class="ns-fs-11 description">Dharani have state of the art facilities for offering
-                                    services that covers a wide range of photogrammetric service requirements. Our
-                                    services are envisioned to meet the diverse needs of our clientele quickly and
-                                    efficiently and our project methodologies are based on the unique set of customer
-                                    requirements and challenges.</p>
-                                <p class=" ns-fs-11 description">Photogrammetry allows you to obtain reliable
-                                    information and measurements of physical objects from photographs and use them for
-                                    development of maps, drawings, or 3D models of terrains. Aerial images require pre-
-                                    and post-processing using Photogrammetry before they can be used to extract valuable
-                                    geo-data. </p>
-                                <p class=" ns-fs-11 description">DGT has an extensive experience in handling
-                                    Photogrammetry projects on all scales of mapping. </p>
-                                <p class=" ns-fs-11 description">High quality aerial photography is the primary
-                                    foundation for Photogrammetry mapping, and we have executed numerous projects over
-                                    varied applications.</p>
-                                <h5>SERVICES OFFERED INCLUDE </h5>
+                                <p class="ns-fs-11 description">DGT has added the capability to collect high-resolution
+                                    imagery from a small, Unmanned Aerial Vehicle (UAV). This system is safe, efficient
+                                    and cost-competitive in comparison to traditional fixed-wing -based data collection
+                                    platforms and terrestrial survey operations. The collected imagery can be
+                                    efficiently processed to generate digital surface models, topography and imagery
+                                    data products to integrate into both CAD and GIS systems. These images can then be
+                                    transformed into orthomosaics (maps) and 3D elevation models with relative accuracy
+                                    of down to 3 cm / 5 cm.</p>
+
+                                <h5>WE ARE FOCUSED ON APPLICATIONS INVOLVING OUR EXPERTISE AND EXPERIENCE, WHICH ARE
+                                </h5>
                                 <div class="pl-3 pr-3 pt-4 pb-1">
-                                    <div *ngFor="let item of dpItems" data-aos="zoom-in" class="row pb-2">
+                                    <div *ngFor="let item of uavItems" data-aos="zoom-in" class="row pb-2">
                                         <div class="col-lg-12">
                                             <div class="card card-lift--hover shadow border-0 p-2">
                                                 <div class="icon icon-shape icon-shape-primary rounded-circle">
                                                     <i class="ni ni-bold-right"></i>
                                                 </div>
-                                                <span class="ns-fs-11 mt-0 pl-lg-md position-fixed pt-2">
+                                                <span
+                                                    class="text-capitalize ns-fs-11 mt-0 pl-lg-md position-fixed pt-2">
                                                     {{ item.text }} </span>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
+                                <div class="col-lg-6 card-lift--hover pb-2 pl-3 pt-3">
+                                    <img src="./assets/img/theme/UAV02.png" alt="Raised image"
+                                        class="img-fluid rounded shadow-lg">
+                                </div>
                             </div>
                         </ng-template>
                     </li>
                     <li class="nav-item" [ngbNavItem]="">
-                        <a class="card shadow nav-link ns-fs-11" ngbNavLink>Ortho Photography</a>
+                        <a class="card shadow nav-link ns-fs-11" ngbNavLink>Aerial Lidar </a>
                         <ng-template ngbNavContent>
                             <div class="tab-content">
-                                <p class="ns-fs-11 description">Orthophotography is produced through a set of aerial
-                                    images. Our systems execute aerial Lidar Topography with rectified orthophotography
-                                    with direct geo references.</p>
-                                <p class=" ns-fs-11 description">The data is digitally corrected to represent an
-                                    orthogonal projection without defects of perspective, allowing us to generate
-                                    accurate planimetry and maps, as opposed to an aerial photograph.</p>
-                                <p class=" ns-fs-11 description">Aerial photographs will always present deformations
-                                    caused by the perspective from the camera and the height or the speed at which the
-                                    camera moves.</p>
-                                <div class="text-center card-lift--hover">
-                                    <img src="./assets/img/theme/Ortho.png" alt="Raised image"
+                                <p class="ns-fs-11 description">A LiDAR collection system uses a powerful laser sensor
+                                    comprised of a transmitter and a receiver, a geodetic-quality Global Positioning
+                                    System (GPS) receiver, and an Inertial Navigation System (INS) unit. The technology
+                                    resembles that used by radar sensors by which a device emits energy (focused light)
+                                    and then measures the time it takes to travel to a target and return to a collector
+                                    and at the same time compensates for the movement of the aircraft and the sensor.
+                                    <br>
+                                    Aerial LiDAR Scanning for Large-Scale Topographic and As-Built Surveying. With this,
+                                    we can map large-scale topographies and get substantial and complex outputs as 3D
+                                    modelling, etc.
+                                    <br>
+                                    DGT has well expertise team to provide END to END services with cost effective and
+                                    on time deliveries..
+                                </p>
+                                <h5>APPLICATIONS ARE </h5>
+                                <div class="pl-3 pr-3 pt-4 pb-1">
+                                    <div *ngFor="let item of alItems" data-aos="zoom-in" class="row pb-2">
+                                        <div class="col-lg-12">
+                                            <div class="card card-lift--hover shadow border-0 p-2">
+                                                <div class="icon icon-shape icon-shape-primary rounded-circle">
+                                                    <i class="ni ni-bold-right"></i>
+                                                </div>
+                                                <span
+                                                    class="text-capitalize ns-fs-11 mt-0 pl-lg-md position-fixed pt-2">
+                                                    {{ item.text }} </span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6 card-lift--hover pb-2 pl-3 pt-3">
+                                    <img src="./assets/img/theme/AerialLidar_01.png" alt="Raised image"
+                                        class="img-fluid rounded shadow-lg">
+                                </div>
+                                <div class="col-lg-6 card-lift--hover pb-2 pl-3 pt-3">
+                                    <img src="./assets/img/theme/AerialLidar_05.png" alt="Raised image"
                                         class="img-fluid rounded shadow-lg">
                                 </div>
                             </div>
@@ -237,13 +250,83 @@
             <div [ngbNavOutlet]="nav2" class="custom-tab-content"></div>
 
         </div>
-        <!-- SVG separator -->
-        <div class="separator separator-bottom separator-skew zindex-100">
-            <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1"
-                xmlns="http://www.w3.org/2000/svg">
-                <polygon class="fill-white" points="2560 0 2560 100 0 100"></polygon>
-            </svg>
-        </div>
+        
     </section>
 
+    <section class="section section-shaped section-lg pt-0">
+        <div class="shape shape-style-1">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        <div data-aos="zoom-out" class="container pt-lg-7">
+            <div class="row justify-content-center">
+                <div class="col-lg-8">
+                    <div class="card bg-secondary shadow border-0">
+                        <div class="card-header bg-white">
+                            <div class="text-center"><h4>Any Questions ?</h4></div>
+                        </div>
+                        <div class="card-body px-lg-5 py-lg-5">
+                            <form role="form">
+                                <div class="form-group">
+                                    <div class="input-group input-group-alternative mb-3">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text"><i class="ni ni-hat-3"></i></span>
+                                        </div>
+                                        <input class="form-control" placeholder="Name" type="text">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <div class="input-group input-group-alternative mb-3">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text"><i class="ni ni-email-83"></i></span>
+                                        </div>
+                                        <input class="form-control" placeholder="Email" type="email">
+                                    </div>
+                                </div>
+                                <div class="form-group focused">
+                                    <div class="input-group input-group-alternative">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text"><i class="ni ni-mobile-button"></i></span>
+                                        </div>
+                                        <input class="form-control" placeholder="Telephone" type="tel" id="phone"
+                                            name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
+
+                                    </div>
+                                </div>
+                                <div class="form-group focused">
+                                    <div class="input-group input-group-alternative">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text"><i class="ni ni-email-83"></i></span>
+                                        </div>
+                                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
+                                            placeholder="Message"></textarea>
+                                    </div>
+                                </div>
+                                <div class="row my-4">
+                                    <div class="col-12">
+                                        <div class="custom-control custom-control-alternative custom-checkbox">
+                                            <input class="custom-control-input" id="customCheckRegister"
+                                                type="checkbox">
+                                            <label class="custom-control-label" for="customCheckRegister"><span>
+                                                    By using this form you agree with the storage and handling of your
+                                                    data by this website.</span></label>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="text-center">
+                                    <button type="button" class="btn btn-primary mt-4">Submit</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </main>
