--- a/src/app/support/support.component.html
+++ b/src/app/support/support.component.html
@@ -269,12 +269,18 @@
         <div class="container">
             <div data-aos="zoom-out" class="px-3">
                 <div class="pb-3">
-                    <span class="icon icon-shape bg-gradient-white shadow rounded-circle text-primary">
+                    <div
+                        class="icon-heading-container icon icon-shape bg-gradient-white shadow rounded-circle text-primary">
+                        <i class="fa fa-life-ring"></i>
+                        <h2 class="display-3 text-primary">Monitoring Team Support</h2>
+                    </div>
+
+                    <!-- <span class="icon icon-shape bg-gradient-white shadow rounded-circle text-primary">
                         <i class="fa fa-life-ring"></i>
                     </span>
                     <div class="header-icon-title">
                         <h2 class="display-3 text-primary pl-2">Monitoring Team Support</h2>
-                    </div>
+                    </div> -->
                 </div>
 
                 <div class="pb-4">
@@ -337,4 +343,24 @@
             </svg>
         </div>
     </section>
+    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+        aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    ...
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>
